Hoy tocó refactor. Haiku para la conexión a la base de datos, mucho más rápido y seguro 10/10. Logger de librería, en vez de eso homebrew que tenía. Recursos de db encapsulados y en SQL en su carpetita de resources/. Un espectáculo.